# CPPPackages

./: CMakeLists.txt  README.md  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml
recipes/grpc/: conandata.yml  conanfile.py
recipes/gtest/: conanfile.py
